--- a/src/index.scss
+++ b/src/index.scss
@@ -1,29 +1,10 @@
-
-@font-face {
-  font-family: 'Inter Variable';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 100 900;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 @font-face {
   font-family: 'Open Sans Variable';
   font-style: normal;
   font-display: swap;
   font-weight: 300 800;
   src: url(https://cdn.jsdelivr.net/fontsource/fonts/open-sans:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
-}
-
-@font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-display: swap;
-  font-weight: 400;
-  src: url(https://cdn.jsdelivr.net/fontsource/fonts/poppins@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/poppins@latest/latin-400-normal.woff) format('woff');
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 html {
@@ -31,7 +12,9 @@ html {
 }
 
 body {
-  background-color: #0f172a;
+  --test: red;
+  --mantine-background-color: #0f172a;
+  background-color: var(--mantine-background-color);
 
   ::selection {
     color: var(--mantine-primary-color-0);
@@ -39,13 +22,16 @@ body {
   }
 }
 
-a.mantine-Text-root {
-  transition: color 0.15s ease;
-  color: var(--mantine-primary-color-0);
-  font-weight: 500;
+.mantine-Text-root {
+  a {
+    transition: color 0.15s ease;
+    text-decoration: none;
+    color: var(--mantine-primary-color-0);
+    font-weight: 500;
 
-  &:hover {
-    color: var(--mantine-primary-color-5);
+    &:hover {
+      color: var(--mantine-primary-color-5);
+    }
   }
 }
 
@@ -59,7 +45,7 @@ a.mantine-ActionIcon-root {
   }
 }
 
-$dimlight: rgba(198, 194, 255, 0.6);  // blend mode: overlay
+$dimlight: rgba(198, 194, 255, 0.6); // blend mode: overlay
 // $dimlight: rgba(29, 78, 216, 0.15);  // blend mode: none
 
 .floatingHighlight {
